--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "start": "npx nodemon --exec babel-node src/index.js",
+    "webpack:debug": "node --inspect-brk ./node-modules/.bin/webpack --inline --progress",
+    "build": "cross-env NODE_ENV=prod webpack --config config/webpack.config.prod.js",
+    "dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --inspect ./src/index.js",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -19,14 +23,43 @@
   },
   "homepage": "https://github.com/iahjc/koa#readme",
   "dependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "@koa/cors": "^3.3.0",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "koa": "^2.13.4",
     "koa-body": "^5.0.0",
+    "koa-combine-routers": "^4.0.2",
+    "koa-compose": "^4.1.0",
+    "koa-compress": "^5.1.0",
+    "koa-helmet": "^6.1.0",
     "koa-json": "^2.0.2",
     "koa-router": "^12.0.0",
-    "nodemon": "^2.0.19"
+    "koa-static": "^5.0.0",
+    "nodemon": "^2.0.19",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@babel/core": "^7.18.10",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "koa-combine-routers": "^4.0.2",
+    "koa-helmet": "^6.1.0",
+    "koa-static": "^5.0.0",
+    "nodemon": "^2.0.19",
+    "rimraf": "^3.0.2",
+    "terser-webpack-plugin": "^5.3.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
