--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "npx nodemon --exec babel-node src/index.js",
     "webpack:debug": "node --inspect-brk ./node-modules/.bin/webpack --inline --progress",
     "build": "cross-env NODE_ENV=prod webpack --config config/webpack.config.prod.js",
-    "dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --inspect ./src/index.js",
+    "dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --inspect=9230 ./src/index.js",
     "clean": "rimraf dist"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "nodemon": "^2.0.19",
+    "svg-captcha": "^1.4.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
